--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
         <commons-lang3.version>3.6</commons-lang3.version>
         <javax-mail.version>1.6.0</javax-mail.version>
         <httpmime.version>4.4.1</httpmime.version>
+        <easyexcel.version>2.1.7</easyexcel.version>
     </properties>
 
     <scm>
@@ -61,6 +62,14 @@
             <artifactId>javax.mail</artifactId>
             <version>${javax-mail.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.6</version>
+            <scope>compile</scope>
+        </dependency>
+
         <dependency>
             <groupId>com.mitchellbosecke</groupId>
             <artifactId>pebble</artifactId>
@@ -136,6 +145,14 @@
             <artifactId>javacsv</artifactId>
             <version>${csv.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>easyexcel</artifactId>
+            <version>${easyexcel.version}</version>
+        </dependency>
+
+
     </dependencies>
 
     <profiles>
